[package]
name = "bran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
clap_derive = "4.5.4"
flate2 = "1.0.30"
hex = "0.4.3"
sha1 = "0.10.6"
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
walkdir = "2.5.0"
